Completed GST output report

--- a/Prints/GstInput.rdlc
+++ b/Prints/GstInput.rdlc
@@ -1452,7 +1452,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>GST Input Report from </Value>
+                      <Value>GST Report from </Value>
                       <Style />
                     </TextRun>
                     <TextRun>
