--- a/Prints/Invoice.rdlc
+++ b/Prints/Invoice.rdlc
@@ -9,7 +9,7 @@
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>dcd679de-a1b0-450e-bd1d-fe43498ae9c1</rd:DataSourceID>
+      <rd:DataSourceID>d997b40e-cf55-44b3-aac9-1ca413744de4</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
@@ -21,6 +21,10 @@
       <Fields>
         <Field Name="Description">
           <DataField>Description</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="HsnCode">
+          <DataField>HsnCode</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="Rate">
@@ -57,10 +61,10 @@
                   <Width>0.73024in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>3.20644in</Width>
+                  <Width>3.15156in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.72965in</Width>
+                  <Width>0.78858in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>0.44201in</Width>
@@ -387,7 +391,6 @@
                     <TablixCell>
                       <CellContents>
                         <Textbox Name="Description">
-                          <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -414,18 +417,19 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox11">
+                        <Textbox Name="HsnCode">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>50079010</Value>
+                                  <Value>=Fields!HsnCode.Value</Value>
                                   <Style>
                                     <FontFamily />
                                   </Style>
@@ -434,7 +438,7 @@
                               <Style />
                             </Paragraph>
                           </Paragraphs>
-                          <rd:DefaultName>Textbox11</rd:DefaultName>
+                          <rd:DefaultName>HsnCode</rd:DefaultName>
                           <Style>
                             <Border>
                               <Color>LightGrey</Color>
@@ -578,9 +582,8 @@
             <RepeatColumnHeaders>true</RepeatColumnHeaders>
             <RepeatRowHeaders>true</RepeatRowHeaders>
             <DataSetName>SalesLineItems</DataSetName>
-            <Top>0cm</Top>
             <Height>0.44444in</Height>
-            <Width>7.77001in</Width>
+            <Width>7.77406in</Width>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -600,7 +603,7 @@
           </TopBorder>
         </Style>
       </Body>
-      <Width>7.77001in</Width>
+      <Width>7.77406in</Width>
       <Page>
         <PageHeader>
           <Height>2.17514in</Height>
@@ -1086,8 +1089,8 @@
             </Line>
             <Line Name="Line2">
               <Top>1.22222in</Top>
-              <Left>5.54624in</Left>
-              <Height>0.935in</Height>
+              <Left>5.54792in</Left>
+              <Height>0.93221in</Height>
               <Width>0in</Width>
               <ZIndex>15</ZIndex>
               <Style>
@@ -1388,11 +1391,15 @@
                   <TextRuns>
                     <TextRun>
                       <Value>GSTIN: </Value>
-                      <Style />
+                      <Style>
+                        <FontWeight>Bold</FontWeight>
+                      </Style>
                     </TextRun>
                     <TextRun>
                       <Value>=Parameters!PartyGSTIN.Value</Value>
-                      <Style />
+                      <Style>
+                        <FontWeight>Bold</FontWeight>
+                      </Style>
                     </TextRun>
                   </TextRuns>
                   <Style>
@@ -1697,6 +1704,7 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox3</rd:DefaultName>
+              <Top>0cm</Top>
               <Left>4.36612in</Left>
               <Height>0.21944in</Height>
               <Width>0.72763in</Width>
@@ -1727,6 +1735,7 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Subtotal</rd:DefaultName>
+              <Top>0cm</Top>
               <Left>6.65124in</Left>
               <Height>0.21944in</Height>
               <Width>1.06667in</Width>
@@ -1760,6 +1769,7 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>TotalQty</rd:DefaultName>
+              <Top>0cm</Top>
               <Left>5.09375in</Left>
               <Height>0.21944in</Height>
               <Width>0.42639in</Width>
@@ -1788,6 +1798,7 @@
               </Style>
             </Line>
             <Line Name="Line6">
+              <Top>0cm</Top>
               <Left>5.54792in</Left>
               <Height>1.58207in</Height>
               <Width>0in</Width>
@@ -1807,6 +1818,14 @@
                   <TextRuns>
                     <TextRun>
                       <Value>=IIf(CDec(Parameters!Disc1Amt.Value)=0, "", "Discount")</Value>
+                      <Style />
+                    </TextRun>
+                    <TextRun>
+                      <Value xml:space="preserve"> </Value>
+                      <Style />
+                    </TextRun>
+                    <TextRun>
+                      <Value>=IIf(CDec(Parameters!Disc1Pct.Value)=0, "", Parameters!Disc1Pct.Value+"%")</Value>
                       <Style />
                     </TextRun>
                   </TextRuns>
@@ -3646,6 +3665,12 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="Disc1Pct">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
@@ -3836,6 +3861,11 @@
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>10</RowIndex>
           <ParameterName>Parcel</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>2</ColumnIndex>
+          <RowIndex>10</RowIndex>
+          <ParameterName>Disc1Pct</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
