--- a/Prints/GstInput.rdlc
+++ b/Prints/GstInput.rdlc
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Report xmlns="http://schemas.microsoft.com/sqlserver/reporting/2016/01/reportdefinition" xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner">
+  <Description>GST Report</Description>
+  <Author>Balamurugan Thanikachalam</Author>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
     <DataSource Name="Prints">
