Saree description, GST Report for Jari purchase

--- a/Prints/Invoice.rdlc
+++ b/Prints/Invoice.rdlc
@@ -396,7 +396,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!Description.Value</Value>
+                                  <Value>=Left(Fields!Description.Value,30)</Value>
                                   <Style>
                                     <FontFamily />
                                   </Style>
@@ -417,6 +417,7 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -1706,7 +1707,6 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox3</rd:DefaultName>
-              <Top>0cm</Top>
               <Left>4.20998in</Left>
               <Height>0.21944in</Height>
               <Width>0.76432in</Width>
@@ -1737,7 +1737,6 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Subtotal</rd:DefaultName>
-              <Top>0cm</Top>
               <Left>6.65124in</Left>
               <Height>0.21944in</Height>
               <Width>1.06667in</Width>
@@ -1771,7 +1770,6 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>TotalQty</rd:DefaultName>
-              <Top>0cm</Top>
               <Left>5.05378in</Left>
               <Height>0.21944in</Height>
               <Width>0.46636in</Width>
@@ -1800,7 +1798,6 @@
               </Style>
             </Line>
             <Line Name="Line6">
-              <Top>0cm</Top>
               <Left>5.54792in</Left>
               <Height>1.58207in</Height>
               <Width>0in</Width>
